# order-processing-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PROGRESS.md  README.md  ROADMAP.md  TRACE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: README.md  env.py
alembic/versions/: 20260418_0001_initial_orders_schema.py
app/: main.py
app/api/v1/: dependencies.py  orders.py  router.py
app/core/: cache.py  config.py  logging.py  pagination.py  rate_limit.py
app/db/: base.py  redis.py
app/middleware/: rate_limit.py  request_context.py
app/models/: __init__.py  order.py
app/schemas/: errors.py  order.py
app/services/: order_repository.py
docs/adr/: ADR-001-api-versioning.md  ADR-002-cursor-pagination.md  ADR-003-postgresql-over-mongodb.md  ADR-004-caching-and-rate-limiting.md  README.md
docs/coding/: README.md  lru-cache.md
tests/integration/: conftest.py  test_orders_flow.py
tests/unit/: test_idempotency_hash.py  test_pagination.py  test_status_transitions.py
